# sprited-comfyui-nodes

./: LICENSE  README.md  __init__.py  install.sh  pyproject.toml  requirements.txt  test_shot_splitter.py  test_slice_batch.py  test_video_downloader.py
.github/: ISSUE_TEMPLATE.md
docs/: anti-corruption-v1.md  birefnet-background-removal.md
scripts/: birefnet.py  clip_score.py  clip_score_v2.py  split_shot.py
src/sprited_nodes/: __init__.py  anti_corruption.py  birefnet_background_removal.py  clip_score.py  clip_score_v2.py  download_video.py  even_shot_splitter.py  extract_loop.py  extract_loop_v2.py  extract_loop_v3.py  flatten_nested_list.py  loop_momentum_node.py  make_grid.py  nodes.py  parse_int.py  pixel_stats.py  preview_video.py  slice.py  split_shot_by_cut_score.py  split_shots.py  split_shots_v0.py  split_shots_v2.py  split_shots_v3.py  split_shots_v4.py  url_to_video.py
tests/: __init__.py  test_sprited_nodes.py
