[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprited_nodes"
version = "0.0.1"
description = "A collection of custom nodes for ComfyUI"
authors = [
  {name = "sprited-comfyui-nodes", email = "dev@sprited.app"}
]
readme = "README.md"
license = {text = "MIT license"}
classifiers = []
dependencies = [
    "requests>=2.25.0",
    "scenedetect>=0.6.0",
    "opencv-python>=4.5.0",
]



[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
bugs = "https://github.com/sprited-ai/sprited_nodes/issues"
homepage = "https://github.com/sprited-ai/sprited_nodes"


[tool.comfy]
PublisherId = "sprited-ai"
DisplayName = "Sprited ComfyUI Nodes"
Icon = ""


[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
